<resources>
    <string name="app_name">TokoRoti</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="nice_to_see_u_again">Nice To See U Again</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="dum">Menjual berbagai macam roti seperti bolu, kukis, Croissant dll. tempat ini memiliki pantry sehingga bisa dimakan ditempat dan semacam cafe. Tempat ini menyediakan delivery order untuk jarak maksimal 1 km. dan kami bermitra dengan GOJEK</string>
</resources>
